--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,4 @@ skip_missing_interpreters = true
 envlist = py26,py27,py33,py34,py35
 
 [testenv]
-deps =
-    pytest
-commands = ./test.py
-recreate = True
+commands = ./test.py {posargs}
