--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,8 @@
 [tox]
 skip_missing_interpreters = true
-envlist = py26,py27,py33,py34,py35
+envlist = py26,py27,py33,py34,py35,pypy
 
 [testenv]
-commands = ./test.py {posargs}
+deps =
+    pytest
+commands = py.test {posargs}
