Add flake8 to tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,12 @@
 [tox]
 skip_missing_interpreters = true
-envlist = py26,py27,py33,py34,py35,pypy
+envlist = py26,py27,py33,py34,py35,pypy,flake8
 
 [testenv]
 deps =
     pytest
 commands = py.test {posargs}
+
+[testenv:flake8]
+deps = flake8
+commands = flake8 --exclude='.env*,build' --doctest --max-line-length=100 --ignore=E203,E241,E302
