--- a/tox.ini
+++ b/tox.ini
@@ -9,4 +9,4 @@ commands = py.test {posargs}
 
 [testenv:flake8]
 deps = flake8
-commands = flake8 --exclude='.env*,build' --doctest --max-line-length=100 --ignore=E203,E241,E302
+commands = flake8 --exclude='.env*,build' --doctests --max-line-length=100 --ignore=E203,E241,E302
