--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 include *.rst
 include VERSION
 include LICENSE
-recursive-include currency_converter *.csv
+recursive-include currency_converter *.csv *.zip
