--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py26,py27,py33,py34,py35,pypy,flake8
 
 [testenv]
 deps =
-    pytest
+    pytest==3.2
 commands = py.test {posargs}
 
 [testenv:flake8]
