Pin only pytest for Python 2.6

--- a/tox.ini
+++ b/tox.ini
@@ -3,9 +3,11 @@ skip_missing_interpreters = true
 envlist = py26,py27,py34,py35,pypy,flake8
 
 [testenv]
-deps =
-    pytest==3.2
+deps = pytest
 commands = py.test {posargs}
+
+[testenv:py26]
+deps = pytest==3.2
 
 [testenv:flake8]
 deps = flake8
