--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 skip_missing_interpreters = true
-envlist = py26,py27,py34,py35,py36,py37,pypy,flake8
+envlist = py26,py27,py34,py35,py36,py37,py38,pypy,pypy3,flake8
 
 [testenv]
 deps = pytest
