Migrate to setup.cfg and pyproject.toml

--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,52 @@
 [tox]
+isolated_build = True
 skip_missing_interpreters = true
-envlist = py27,py35,py36,py37,py38,py39,pypy,pypy3
+envlist = py27,py36,py37,py38,py39,pypy,pypy3
 
 [testenv]
+setenv = PYTHONUTF8 = 1
 deps = pytest
 commands = py.test {posargs}
 
 [testenv:py26]
 deps = pytest==3.2
 
+[pytest]
+addopts =
+    --strict-markers
+    --doctest-modules
+    --doctest-glob='*.rst'
+    --ignore=setup.py
+    --capture=no
+doctest_optionflags =
+    NORMALIZE_WHITESPACE
+    IGNORE_EXCEPTION_DETAIL
+    ELLIPSIS
+norecursedirs =
+    .*
+    doc
+    *.egg-info
+    build
+    dist
+    __pycache__
+
 [testenv:flake8]
-deps = flake8
-commands = flake8 --exclude='.tox,.env*,build,doc' --doctests --max-line-length=100 --ignore=E203,E241,E302
+basepython = python3
+deps =
+    flake8
+    flake8-2020
+    flake8-broken-line
+    flake8-logging-format
+    flake8-printf-formatting
+commands = flake8
+
+[flake8]
+exclude =
+    .*
+    *.egg-info
+    build
+    dist
+    __pycache__
+    doc
+max-line-length = 100
+ignore = E203,E402,W503,B008
