--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,14 +10,15 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
+  test:
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         python-version: [2.7, 3.6, 3.7, 3.8, 3.9, 'pypy-2.7', 'pypy-3.6', 'pypy-3.7']
+        os: [ubuntu-latest] #, windows-latest, macos-latest]
 
+    name: ${{ matrix.os }} - Python ${{ matrix.python-version }}
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -29,3 +30,39 @@ jobs:
     - name: Run tox
       # Run tox using the version of Python in `PATH`
       run: tox -e py
+
+  dist:
+    runs-on: ubuntu-latest
+    needs: [test]
+    name: Build Python packages
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+      with:
+        python-version: "3.8"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install --upgrade wheel setuptools build
+    - name: Build package
+      run: python -m build -s -w -o dist/
+    - uses: actions/upload-artifact@v2
+      with:
+        name: dist
+        path: dist
+
+  dist_check:
+    runs-on: ubuntu-latest
+    needs: [dist]
+    name: Twine check
+    steps:
+    - uses: actions/setup-python@v2
+      with:
+        python-version: "3.8"
+    - name: Install dependencies
+      run: pip install twine
+    - uses: actions/download-artifact@v2
+      with:
+        name: dist
+        path: dist
+    - run: twine check dist/*
