Add PyPI upload for Github Actions

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -74,3 +74,18 @@ jobs:
         name: dist
         path: dist
     - run: twine check dist/*
+
+  dist_upload:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
+    needs: [dist_check]
+    steps:
+    - uses: actions/download-artifact@v2
+      with:
+        name: dist
+        path: dist
+    - name: Publish package to PyPI
+      uses: pypa/gh-action-pypi-publish@master
+      with:
+        user: __token__
+        password: ${{ secrets.PYPI_TOKEN }}
