--- a/setup.cfg
+++ b/setup.cfg
@@ -9,8 +9,8 @@ author_email = alex.prengere@gmail.com
 license_files = LICENSE
 classifiers =
     Development Status :: 5 - Production/Stable
-    Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: Implementation :: CPython
     Programming Language :: Python :: Implementation :: PyPy
 
@@ -18,14 +18,10 @@ classifiers =
 zip_safe = False
 include_package_data = True
 packages = find:
-install_requires =
-    argparse; python_version<='2.6'
+python_requires = >=3.6.1
 setup_requires =
     setuptools_scm
 
 [options.entry_points]
 console_scripts =
     currency_converter = currency_converter.__main__:main
-
-[bdist_wheel]
-universal = 1
