--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 isolated_build = True
 skip_missing_interpreters = true
-envlist = py27,py36,py37,py38,py39,pypy,pypy3
+envlist = py36,py37,py38,py39,py310,pypy3
 
 [testenv]
 setenv = PYTHONUTF8 = 1
