Update tox with packaging and black

--- a/tox.ini
+++ b/tox.ini
@@ -50,3 +50,20 @@ exclude =
     doc
 max-line-length = 100
 ignore = E203,E402,W503
+
+[testenv:black]
+basepython = python3
+deps = black
+commands = black . --target-version py36 --exclude '.tox|.env|build|dist|.eggs|doc'
+
+[testenv:packages]
+allowlist_externals =
+    rm
+basepython = python3
+deps =
+    build
+    twine
+commands =
+    rm -rf build *.egg-info
+    python -m build -s -w -o dist
+    twine check dist/*
