--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -17,10 +17,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9, '3.10', 'pypy-3.6']
+        python-version: [3.6, 3.7, 3.8, 3.9, '3.10', 'pypy-3.6', 'pypy-3.7', 'pypy-3.8', 'pypy-3.9']
         os: [ubuntu-latest] #, windows-latest, macos-latest]
 
-    name: ${{ matrix.os }} - Python ${{ matrix.python-version }}
+    name: ${{ matrix.os }} - ${{ matrix.python-version }}
     steps:
     - uses: actions/checkout@v3
     - name: Get history and tags for SCM versioning to work
