Add flake8 plugins

--- a/tox.ini
+++ b/tox.ini
@@ -33,11 +33,22 @@ norecursedirs =
 [testenv:flake8]
 basepython = python3
 deps =
-    flake8
+    flake8<6
     flake8-2020
+    flake8-async
+    flake8-bugbear
+    flake8-warnings
+    flake8-debugger
     flake8-broken-line
+    flake8-comprehensions
     flake8-logging-format
     flake8-printf-formatting
+    flake8-implicit-str-concat
+    flake8-datetime-utcnow-plugin
+    flake8-markdown
+    flake8-rst
+    flake8-pytest
+    yesqa
 commands = flake8
 
 [flake8]
