--- a/tox.ini
+++ b/tox.ini
@@ -8,64 +8,15 @@ setenv = PYTHONUTF8 = 1
 deps = pytest
 commands = py.test {posargs}
 
-[testenv:py26]
-deps = pytest==3.2
-
-[pytest]
-addopts =
-    --strict-markers
-    --doctest-modules
-    --doctest-glob='*.rst'
-    --ignore=setup.py
-    --capture=no
-doctest_optionflags =
-    NORMALIZE_WHITESPACE
-    IGNORE_EXCEPTION_DETAIL
-    ELLIPSIS
-norecursedirs =
-    .*
-    doc
-    *.egg-info
-    build
-    dist
-    __pycache__
-
-[testenv:flake8]
+[testenv:ruff]
 basepython = python3
-deps =
-    flake8<6
-    flake8-2020
-    flake8-async
-    flake8-bugbear
-    flake8-warnings
-    flake8-debugger
-    flake8-broken-line
-    flake8-comprehensions
-    flake8-logging-format
-    flake8-printf-formatting
-    flake8-implicit-str-concat
-    flake8-datetime-utcnow-plugin
-    flake8-markdown
-    flake8-rst
-    flake8-pytest
-    yesqa
-commands = flake8
-
-[flake8]
-exclude =
-    .*
-    *.egg-info
-    build
-    dist
-    __pycache__
-    doc
-max-line-length = 100
-ignore = E203,E402,W503
+deps = ruff
+commands = ruff .
 
 [testenv:black]
 basepython = python3
 deps = black
-commands = black . --target-version py36 --exclude '.tox|.env|build|dist|.eggs|doc'
+commands = black .
 
 [testenv:packages]
 allowlist_externals =
