Share wheel accross venv in CI

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,8 @@ skip_missing_interpreters = true
 envlist = py36,py37,py38,py39,py310,py311,py312,pypy3
 
 [testenv]
+package = wheel
+wheel_build_env = .pkg
 deps = pytest
 commands = py.test {posargs}
 
