Migrate to Ruff 0.3

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ commands = py.test {posargs}
 [testenv:ruff]
 basepython = python3
 deps = ruff
-commands = ruff .
+commands = ruff check .
 
 [testenv:black]
 basepython = python3
