Drop Python<3.9 support

--- a/tox.ini
+++ b/tox.ini
@@ -1,28 +1,30 @@
 [tox]
 isolated_build = True
 skip_missing_interpreters = true
-envlist = py36,py37,py38,py39,py310,py311,py312,py313,pypy3
+envlist =
+    py{39,310,311,312,313}
+    pypy{39,310}
 
 [testenv]
 package = wheel
 wheel_build_env = .pkg
-deps = pytest
+deps = pytest>=8.0
 commands = py.test {posargs}
 
 [testenv:ruff]
-basepython = python3
+basepython = python3.9
 deps = ruff
 commands = ruff check .
 
 [testenv:black]
-basepython = python3
+basepython = python3.9
 deps = black
 commands = black .
 
 [testenv:packages]
 allowlist_externals =
     rm
-basepython = python3
+basepython = python3.9
 deps =
     build
     twine
