--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-isolated_build = True
+isolated_build = true
 skip_missing_interpreters = true
 envlist =
     py{39,310,311,312,313}
@@ -8,13 +8,24 @@ envlist =
 [testenv]
 package = wheel
 wheel_build_env = .pkg
-deps = pytest>=8.0
+deps =
+    pytest>=8.0
+    pytest-cov>=5.0
 commands = py.test {posargs}
+
+[testenv:coverage]
+basepython = python3.9
+commands = py.test --cov=currency_converter --cov-context=test --cov-report html {posargs}
 
 [testenv:ruff]
 basepython = python3.9
 deps = ruff
 commands = ruff check .
+
+[testenv:ruff-format]
+basepython = python3.9
+deps = ruff
+commands = ruff format . --line-length 88
 
 [testenv:black]
 basepython = python3.9
