--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ envlist =
 package = wheel
 wheel_build_env = .pkg
 deps =
+    pip-system-certs
     pytest>=8.0
     pytest-cov>=5.0
 commands = py.test {posargs}
